Lock scope configuration

--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -1,11 +1,12 @@
 <script type="text/javascript">
+  const FIXED_SCOPE = 'hub.variables.provide hub.variables.readwrite hub.variables.readonly';
   RED.nodes.registerType('uos-config', {
     category: 'config',
     defaults: {
       host: { value: '127.0.0.1', required: true },
       port: { value: 49360, required: true, validate: RED.validators.number() },
       clientName: { value: 'nodered', required: true },
-      scope: { value: 'hub.variables.provide hub.variables.readwrite', required: true },
+      scope: { value: FIXED_SCOPE, required: true },
     },
     credentials: {
       clientId: { type: 'text', required: true },
@@ -54,6 +55,9 @@
         evt.preventDefault();
         fetchScopes();
       });
+      $('#node-config-input-scope').val(FIXED_SCOPE);
+      $('#uos-scope-fixed').text(FIXED_SCOPE);
+
       if (node.credentials && node.credentials.clientId) {
         fetchScopes();
       }
@@ -82,9 +86,10 @@
     <label for="node-config-input-clientSecret"><i class="fa fa-key"></i> Client Secret</label>
     <input type="password" id="node-config-input-clientSecret">
   </div>
+  <input type="hidden" id="node-config-input-scope">
   <div class="form-row">
-    <label for="node-config-input-scope"><i class="fa fa-list"></i> Scope</label>
-    <input type="text" id="node-config-input-scope">
+    <label><i class="fa fa-list"></i> Scope</label>
+    <span id="uos-scope-fixed" class="form-tips"></span>
   </div>
   <div class="form-row">
     <label><i class="fa fa-info-circle"></i> Granted scopes</label>
@@ -102,7 +107,7 @@
     <li><strong>Host / Port</strong> – IP and NATS port of the controller (default <code>127.0.0.1:49360</code>).</li>
     <li><strong>Client Name</strong> – Friendly identifier used in NATS connection logs.</li>
     <li><strong>Client ID / Secret</strong> – OAuth credentials from your u-OS Control Center client.</li>
-    <li><strong>Scope</strong> – Space separated scopes; e.g. <code>hub.variables.provide hub.variables.readwrite</code>.</li>
+    <li><strong>Scope</strong> – Fixed to <code>hub.variables.provide hub.variables.readwrite hub.variables.readonly</code> so the nodes can register providers and read metadata. It cannot be edited in the UI.</li>
     <li><strong>Granted scopes</strong> – Click <em>Refresh</em> to show what the token endpoint actually returns for this client.</li>
   </ul>
 </script>
