--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  const FIXED_SCOPE = 'hub.variables.provide hub.variables.readwrite hub.variables.readonly';
+  const FIXED_SCOPE = 'hub.variables.provide hub.variables.readwrite hub.variables.readonly hub.providers.read';
   RED.nodes.registerType('uos-config', {
     category: 'config',
     defaults: {
