docs: add authorship disclaimer

--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -288,6 +288,7 @@
 
 <script type="text/html" data-help-name="datahub-input">
   <p><strong>DataHub Input</strong> subscribes to a provider via the u-OS Data Hub and emits JSON messages.</p>
+  <p><em>Note: This node is developed by <strong>iotueli</strong> and is NOT an official Weidmüller product.</em></p>
   <dl>
     <dt>u-OS Config</dt>
     <dd>Pick the connection node that holds host, port and OAuth credentials.</dd>
