--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -83,6 +83,12 @@
           data: { host, port, clientId, clientSecret },
           success: function (resp) {
             $testStatus.html(`<span style="color:green"><i class="fa fa-check"></i> Connection OK! Found <strong>${resp.providers}</strong> providers.</span>`);
+            // Cache the providers list globally so input nodes can use it before deploy
+            if (resp.providersList) {
+              window.uOSProvidersCache = window.uOSProvidersCache || {};
+              window.uOSProvidersCache[node.id] = resp.providersList;
+              console.log('Cached providers for', node.id, resp.providersList);
+            }
           },
           error: function (jqXHR, textStatus, errorThrown) {
             const msg = jqXHR.responseJSON?.error || textStatus;
