--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -283,6 +283,10 @@
     <input type="text" id="node-input-name">
   </div>
   <div class="form-row">
+    <label for="node-input-pollingInterval"><i class="fa fa-clock-o"></i> Polling (ms)</label>
+    <input type="number" id="node-input-pollingInterval" placeholder="0 (disabled)">
+  </div>
+  <div class="form-row">
     <label for="node-input-connection"><i class="fa fa-cube"></i> u-OS Config</label>
     <input type="text" id="node-input-connection">
   </div>
