--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -144,10 +144,10 @@
             const error = xhr?.responseJSON?.error;
             let msg = error || xhr.statusText || 'Failed to load variables.';
             if (xhr.status === 404 && error === 'config not found') {
-              msg = 'Config not deployed yet. Please Deploy first.';
+              msg = 'Config not deployed yet. Please Deploy first to load Variables.';
             }
             setVariableStatus(msg);
-            $variablesContainer.empty().append('<div style="color:#aaa; font-style:italic; padding:5px;">Error loading variables.</div>');
+            $variablesContainer.empty().append('<div style="color:#aaa; font-style:italic; padding:5px;">To load variables, the Config Node must be deployed first.</div>');
             $variables.prop('disabled', true);
             syncVariablesField();
           });
@@ -284,7 +284,7 @@
   </div>
   <div class="form-row">
     <label for="node-input-pollingInterval"><i class="fa fa-clock-o"></i> Polling (ms)</label>
-    <input type="number" id="node-input-pollingInterval" placeholder="0 (disabled)">
+    <input type="number" id="node-input-pollingInterval" placeholder="0 = Events only, >0 = Hybrid">
   </div>
   <div class="form-row">
     <label for="node-input-connection"><i class="fa fa-cube"></i> u-OS Config</label>
