--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -5,7 +5,7 @@
     defaults: {
       name: { value: '' },
       connection: { type: 'uos-config', required: true },
-      providerId: { value: 'nodered', required: true }
+      providerId: { value: '', required: false }
     },
     inputs: 1,
     outputs: 1,
