--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -9,7 +9,7 @@
       variablesText: { value: '', required: false },
       pollingInterval: { value: 0, required: false, validate: RED.validators.number() },
     },
-    inputs: 0,
+    inputs: 1,
     outputs: 1,
     icon: "white/datahub-input.svg",
     oneditprepare: function () {
@@ -77,7 +77,13 @@
       let providerRequest = 0;
       let variableRequest = 0;
 
-      const setProviderStatus = (text) => $providerStatus.text(text || '');
+      const setProviderStatus = (text) => {
+        if (text) {
+          $providerStatus.text(text).show();
+        } else {
+          $providerStatus.hide();
+        }
+      };
       const setVariableStatus = (text) => $variablesStatus.text(text || '');
 
       const setProviderValue = (value) => {
@@ -268,6 +274,14 @@
         if (prov) loadVariables(prov, true);
       });
 
+      $('#datahub-vars-all').on('click', () => {
+        $variablesContainer.find('input[type="checkbox"]').prop('checked', true).trigger('change');
+      });
+
+      $('#datahub-vars-none').on('click', () => {
+        $variablesContainer.find('input[type="checkbox"]').prop('checked', false).trigger('change');
+      });
+
       // Removed $providerManual listeners as per instruction
 
       $config.on('change', () => {
@@ -312,12 +326,15 @@
   </div>
   <div class="form-row">
     <label></label>
-    <div id="datahub-provider-status" class="form-tips"></div>
+    <div id="datahub-provider-status" class="form-tips" style="display:none;"></div>
   </div>
   <div class="form-row">
-    <label for="datahub-input-variables"><i class="fa fa-list"></i> Variables</label>
     <div style="display:flex; align-items:center; flex:1; margin-bottom:5px;">
         <span style="flex:1"></span>
+        <div class="btn-group" style="margin-right: 5px;">
+            <button type="button" id="datahub-vars-all" class="red-ui-button red-ui-button-small" title="Select All"><i class="fa fa-check-square-o"></i></button>
+            <button type="button" id="datahub-vars-none" class="red-ui-button red-ui-button-small" title="Deselect All"><i class="fa fa-square-o"></i></button>
+        </div>
         <button type="button" id="datahub-vars-refresh" class="red-ui-button red-ui-button-small" title="Refresh Variables"><i class="fa fa-refresh"></i></button>
     </div>
   </div>
